# MoltMesh

./: .gitignore  .goreleaser.yaml  LICENSE  Makefile  README.md  go.mod  go.sum  moltbook.toml  wrangler.jsonc
.github/workflows/: cloudflare-pages.yml  pages.yml  release.yml
cmd/daemon/: commands.go  main.go
cmd/moltmesh/: commands.go  completion.go  daemon.go  main.go  tui.go
cmd/tui/: main.go
daemon/blob/: blob.go  blob_test.go
daemon/deliver/: blob.go  deliver.go  deliver_test.go
daemon/gossip/: gossip.go  gossip_test.go
daemon/identity/: identity.go  identity_test.go
daemon/inbox/: inbox.go  inbox_test.go
daemon/names/: helpers_test.go  names.go  names_test.go
daemon/network/: network.go  network_test.go
daemon/node/: node.go
daemon/outbox/: outbox.go  outbox_test.go
daemon/registry/: registry.go
daemon/rpc/: diag.go  ext.go  server.go  server_test.go  version.go
daemon/tasks/: tasks.go  (+1 more)
docs/: ARCHITECTURE.md  IPFS-REBASE-PLAN.md  PROPOSAL-payments-marketplace-sandbox.md  REDDIT.md  SKILL.md  index.html  llms.txt  robots.txt  sitemap.xml
e2e/: e2e_test.go
examples/: README.md
proto/: a2a.proto
sdk/python/: README.md  pyproject.toml
sdk/python/moltmesh/: __init__.py  capability.py  client.py  did.py  ext_stub.py  tools_crewai.py
sdk/python/moltmesh/proto/: a2a_pb2.py  a2a_pb2_grpc.py
sdk/python/p2p_a2a/: __init__.py  capability.py  client.py  did.py  tools_crewai.py
sdk/python/p2p_a2a/proto/: a2a_pb2.py  a2a_pb2_grpc.py
sdk/python/tests/: conftest.py  test_capability.py  test_client.py  test_did.py  test_integration.py
(+60 files in other folders)
