[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "p2p-a2a"
version = "0.1.0"
description = "Python SDK for the p2p-a2a daemon — gRPC client, CrewAI tools"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.80.0", "pydantic>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["p2p_a2a"]
